--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,13 @@
 unbind C-b
 set -g prefix C-a
 
+# Setting shell
+set -g default-command /bin/zsh
+set -g default-shell /bin/zsh
+
+# Set tmux limit
+set -g history-limit 5000
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
@@ -16,7 +23,6 @@ set -sg escape-time 0
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
- 
 
 # List of plugins
 set -g @tpm_plugins '                \
