--- a/.gitconfig
+++ b/.gitconfig
@@ -5,13 +5,23 @@
 [core]
 	pager = diff-so-fancy | less --tabs=4 -RFX
 
-[color "diff"]
-	new = green
-	old = red
+[color]
+	ui = true
 
-[pager]
-	log = diff-highlight | less
-	show = diff-highlight | less
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+
+[color "diff"]
+	meta = 11
+	frag = magenta bold
+	func = 146 bold
+	commit = yellow bold
+	new = green bold
+	old = red bold
+	whitespace = red reverse
 
 [diff]
   tool = vimdiff
@@ -19,3 +29,6 @@
 [difftool]
   prompt = false
   trustExitCode = true
+
+[interactive]
+  diffFilter = diff-so-fancy --patch
