--- a/.tigrc
+++ b/.tigrc
@@ -24,7 +24,9 @@ bind generic G      move-last-line
 bind main    G      move-last-line
 bind main    <Esc>g :toggle commit-title-graph
 
-bind generic +      !git commit --amend --allow-empty
+bind generic +        !git commit --amend --allow-empty
+bind main    =        !git commit --fixup=%(commit)
+bind main    <Ctrl-R> !git rebase --autosquash -i %(commit)
 
 bind generic L      !sh -c "git reflog --pretty=raw | tig --pretty=raw"
 
