--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+# Update prefix
+unbind C-b
+set -g prefix C-a
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
