Enable mouse scroll in Tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,9 @@ set -sg escape-time 0
 # Set tmux limit
 set -g history-limit 5000
 
+# Enable mouse scroll
+setw -g mouse on
+
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
