Order tmux session by name

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,6 +23,9 @@ setw -g mouse on
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
+# Order sessions by name
+bind s choose-tree -sZ -O name
+
 # List of plugins
 set -g @tpm_plugins '                     \
     caiogondim/maglev                     \
