--- a/.gitconfig
+++ b/.gitconfig
@@ -4,6 +4,7 @@
 
 [core]
 	pager = diff-so-fancy | less --tabs=4 -RFX
+	autocrlf = input
 
 [color]
 	ui = true
@@ -32,3 +33,5 @@
 
 [interactive]
   diffFilter = diff-so-fancy --patch
+[init]
+	defaultBranch = main
